--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -131,7 +131,7 @@ jobs:
           path: .ssh
       - name: Test postinstall VM
         run: |
-          set -e
+          set -ex
           echo "Setup ssh"
           chmod 0600 ./.ssh/automation_ssh_key
           eval "$(ssh-agent)"
@@ -145,9 +145,7 @@ jobs:
           setup-ssh-port-forwarding "$SERVER_ADDRESS"
           
           echo "Run integration tests"
-          set -x
           ssh -o "StrictHostKeyChecking=no" -o "UserKnownHostsFile=/dev/null" "root@${SERVER_ADDRESS}" cat /usr/local/etc/instance.cfg
-          set +x
           test-ncp-instance -a -f "$SNAPSHOT_ID" -b "${VERSION}" --systemtest-args "--skip-update-test" "root@${SERVER_ADDRESS}" "localhost" "8443" "9443" || {
     
             echo "Integration tests failed"
