Revert "build-docker.yml: Use ubuntu-latest runner"
This reverts commit 6a7846612d7a82a03c20495373602cfcf595a1f3.

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -27,7 +27,7 @@ on:
 jobs:
   build:
     if: ${{ github.repository == 'nextcloud/nextcloudpi' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       VERSION: "${{ inputs.git_ref || github.ref }}"
       ARCH: "${{ inputs.arch || 'x86' }}"
@@ -75,7 +75,7 @@ jobs:
     if: ${{ inputs.arch != 'armhf' }}
     needs:
       - build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       VERSION: "${{ inputs.git_ref || github.ref }}"
       ARCH: "${{ inputs.arch || 'x86' }}"
@@ -394,7 +394,7 @@ jobs:
   test:
     needs:
       - build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       VERSION: "${{ inputs.git_ref || github.ref }}"
       ARCH: "${{ inputs.arch || 'x86' }}"
