build-SD-armbian.sh: Use INCLUDE_HOME_DIR=yes to keep generated home directories
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -183,7 +183,7 @@ jobs:
           sudo wget -nv https://github.com/multiarch/qemu-user-static/releases/latest/download/qemu-arm-static -O raspbian_root/usr/bin/qemu-arm-static
           sudo chmod +x raspbian_root/usr/bin/qemu-{arm,aarch64}-static
           echo 'Mutex posixsem' | sudo tee -a raspbian_root/etc/apache2/mods-available/ssl.conf
-          cat <<EOF > raspbian_root/etc/containers/containers.conf
+          cat <<EOF | sudo tee raspbian_root/etc/containers/containers.conf
           [containers]
           keyring=false
           default_sysctls = []
