build-SD-armbian.sh: Disable ufw to ensure connectivity for the container
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -202,7 +202,9 @@ jobs:
             return $rc
           }
           
-          sudo systemd-nspawn --boot --capability=CAP_NET_ADMIN,CAP_MKNOD -D ./raspbian_root/ -M ncp --hostname=nextcloudpi |& awk "{ print \"${LOG_GUEST} \" \$0 }" &
+          trap 'sudo ufw enable' EXIT 1 2 3 15
+          sudo ufw disable
+          sudo systemd-nspawn --boot --capability=CAP_NET_ADMIN,CAP_MKNOD --network-veth -D ./raspbian_root/ -M ncp --hostname=nextcloudpi |& awk "{ print \"${LOG_GUEST} \" \$0 }" &
           sleep 60
           
           CONTAINER_CMD=(sudo systemd-run --machine=ncp -P --wait)
