--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -207,18 +207,18 @@ jobs:
       artifact_file: "${{ needs.lxd-arm64.outputs.lxc_artifact_file }}"
       dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
 
-  raspberrypi-release:
-    needs:
-      - raspberrypi
-      - github-release
-    if: ${{ inputs.sd-images || github.event_name != 'workflow_dispatch' }}
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
-      artifact_id: "${{ needs.raspberrypi.outputs.artifact_name }}"
-      artifact_file: "${{ needs.raspberrypi.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
-    secrets: inherit
+#  raspberrypi-release:
+#    needs:
+#      - raspberrypi
+#      - github-release
+#    if: ${{ inputs.sd-images || github.event_name != 'workflow_dispatch' }}
+#    uses: ./.github/workflows/publish-image.yml
+#    with:
+#      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+#      artifact_id: "${{ needs.raspberrypi.outputs.artifact_name }}"
+#      artifact_file: "${{ needs.raspberrypi.outputs.artifact_file }}"
+#      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
+#    secrets: inherit
 
   odroidxu4-release:
     needs:
