--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu,ARM64,ncp
+    runs-on: [ubuntu, ARM64, ncp]
     env:
       VERSION: "${{ inputs.git_ref }}"
       LOG_GUEST: "\\033[1;34mGUEST::\\033[0m"
@@ -130,7 +130,7 @@ jobs:
 
   test:
     needs: build
-    runs-on: ubuntu,ARM64,ncp
+    runs-on: [ubuntu, ARM64, ncp]
     env:
       VERSION: "${{ inputs.git_ref }}"
       ARTIFACT_ID: ${{ needs.build.outputs.artifact_name }}
