build-lxd.yml: Use self-hosted garm runners and ubuntu-22.04
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -40,9 +40,9 @@ jobs:
         run: |
           if [[ "${LXD_ARCH}" == "arm64" ]]
           then
-            RUNNER_LABEL=ubuntu-20.04-arm64
+            RUNNER_LABEL=ubuntu-22.04,ARM64
           else
-            RUNNER_LABEL=ubuntu-20.04
+            RUNNER_LABEL=ubuntu-22.04
           fi
           echo "runner_label=$RUNNER_LABEL" | tee -a $GITHUB_OUTPUT
 
