ncp-previewgenerator: Add support for NC 28
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -376,7 +376,11 @@ jobs:
             tail -n 20 geckodriver.log >&2 || true
             echo "================"
             echo "ncp.log: "
-            lxc exec ncp -- "tail -n20 /var/log/ncp.log"
+            lxc exec ncp -- "tail -n20 /var/log/ncp.log" || true
+            echo "================"
+            echo "nextcloud log: "
+            datadir="$(lxc exec ncp -- ncc config:system:get datadirectory)"
+            lxc exec ncp -- cat "$datadir/nextcloud.log" || true
             exit 1
           }
           lxc stop ncp
