build-lxd.yml, build-sd-images.yml: Add debug output if tests fail
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -236,6 +236,9 @@ jobs:
             echo "================"
             echo "ncp.log: "
             lxc exec ncp -- "tail -n20 /var/log/ncp.log"
+            echo "================"
+            echo "Nextcloud log: "
+            lxc exec ncp -- cat /opt/ncdata/data/nextcloud.log
             exit 1
           }
 
